--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Main</title>
 
+    <!-- Google Fonts Link -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Favicon -->
+
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
@@ -23,9 +28,12 @@
 
 <body>
 
-    <header style="background: #2d25a0;">
+    <header style="background: url(/images/bg.png);">
+
+        <!-- **** Banner part Start **** -->
+
         <main>
-            <section style="background: #2d25a0;" id="banner_part">
+            <section id="banner_part">
                 <div class="container">
                     <div class="banner">
                         <div class="banner_caption">
@@ -39,9 +47,15 @@
                 </div>
             </section>
         </main>
+
+        <!-- **** Banner part End **** -->
+
     </header>
 
+    <!-- ------- Players Description Part Start -------- -->
+
     <main>
+
         <section id="players_part">
             <div class="container">
                 <div class="players">
@@ -204,6 +218,67 @@
         </section>
     </main>
 
+    <!-- ------- Players Description Part End -------- -->
+
+    <!-- ------- Bonus Part Start -------- -->
+
+    <main>
+
+        <!-- Group Part Start -->
+
+        <section id="group_part">
+            <div class="container">
+                <h1 class="section_tittle">Groups</h1>
+                <div class="groups">
+                    <div class="group">
+                        <h2>Group A</h2>
+                        <div class="team_img">
+                            <img src="images/argentina.png" alt="">
+                            <img src="images/bolivia.png" alt="">
+                            <img src="images/chile.png" alt="">
+                            <img src="images/paraguay.png" alt="">
+                            <img src="images/uruguay.png" alt="">
+                        </div>
+                    </div>
+                    <div class="group">
+                        <h2>Group B</h2>
+                        <div class="team_img">
+                            <img src="images/brasil.png" alt="">
+                            <img src="images/colombia.png" alt="">
+                            <img src="images/ecuador.png" alt="">
+                            <img src="images/peru.png" alt="">
+                            <img src="images/venezuela.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- Group Part End -->
+
+    <!-- Sponsor Part Start -->
+    <header style="background: url(images/gray-bg.png);">
+        <figure>
+            <section id="sponsor">
+                <div class="container">
+                    <h1 class="section_tittle">Official Sponsors</h1>
+                    <div class="sponsor_img">
+                        <img src="images/12522710396234458687.png" alt="">
+                        <img src="images/5707736362628604970.png" alt="">
+                        <img src="images/6162210905054932979.png" alt="">
+                        <img src="images/7752418864928874923.png" alt="">
+                    </div>
+                </div>
+            </section>
+        </figure>
+    </header>
+
+    <!-- Sponsor part End -->
+
+    <!-- ------- Bonus Part End -------- -->
+
+    <!-- ------- Footer Part Start -------- -->
 
     <footer>
         <div class="container">
@@ -223,6 +298,8 @@
             </div>
         </div>
     </footer>
+
+    <!-- ------- Footer Part End -------- -->
 
 </body>
 
