--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
 
-    <header style="background: url(images/background.jpg);">
+    <header>
 
         <!-- **** Banner part Start **** -->
 
